--- a/extensions/readability/css/readability.css
+++ b/extensions/readability/css/readability.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
+/* THIS FILE WAS MODIFIED TO LOAD sprite-readability.png FROM THE EXTENSION INSTEAD OF THE WEB. I HAVE TO SAY THIS BECAUSE THE APACHE LICENSE SAYS SO. */
 /* Document */
 body{font-size:10px;line-height:1;}
-#readability-logo,#arc90-logo,.footer-twitterLink,#readTools a,a.rdbTK-powered span{background-color:transparent!important;background-image:url(http://lab.arc90.com/experiments/readability/images/sprite-readability.png)!important;background-repeat:no-repeat!important;}
+#readability-logo,#arc90-logo,.footer-twitterLink,#readTools a,a.rdbTK-powered span{background-color:transparent!important;background-image:url(http://127.0.0.1:8133/readability/images/sprite-readability.png)!important;background-repeat:no-repeat!important;}
 #readOverlay{text-rendering:optimizeLegibility;display:block;position:absolute;top:0;left:0;width:100%;}
 #readInner{max-width:800px;margin:1em auto;}
 #readInner a{color:#039;text-decoration:none;}
