--- a/lib/extensions/ppirc_web_irc_sidebar/style.css
+++ b/lib/extensions/ppirc_web_irc_sidebar/style.css
@@ -1,4 +1,3 @@
 div[class="nicklist tab-invisible dynamicpanel qwebirc-qui"] {
-    width: 0 !important;
-    height: 0 !important;
+    display: none !important;
 }
